--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -3,21 +3,17 @@
 
 {% block css_files %}
 <link rel="stylesheet" href="{% static "blog/index.css" %}" />
+<link rel="stylesheet" href="{% static "blog/post.css" %}" />
 {% endblock css_files %}
 
 {% block title %} My Blog{% endblock title %} 
 {% block content %}
 
-<header id="main-navigation">
-    <h1><a href="">Anas' Blog</a></h1>
-    <nav>
-        <a href="">All Posts</a>
-    </nav>
-</header>
+
 
 <section id="welcome">
     <header>
-        <img src="" alt="Anas – The Author Of This Blog" />
+        <img src="{% static "blog/images/gpt.jfif" %}" alt="Anas – The Author Of This Blog" />
         <h2>Anas'S BLOG</h2>
     </header>
      <p>Hi , Im anas and I love to  blog about tech and the world !</p>
@@ -25,20 +21,10 @@
 
 <section id="latest-posts">
     <ul>
-        <li>
-            <article class="post">
-                <a href="">
-                    <img src="" alt="Mountain Hiking" />
-                    <div class="post__content">
-                        <h3>Mountain Hiking</h3>
-                        <p>
-                            There's nothing like the views you get when hiking in the mountains! 
-                            And I wasn't even prepared for what happened whilst I was enjoying the view!
-                        </p>
-                    </div>
-                </a>
-            </article>
-        </li>
+        {%for post in posts%}
+            {% include "blog/includes/post.html"%}
+        {% endfor %}
+       
     </ul>
     
 </section>
